[NGRINDER-172] Shorten logs on agent and server - Make agent only start from agent jar folder. - Shorten agent logs when it fails to connect to console. - Make the agent wait period longer before finished.